Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <p> PHARRELLWILLIAMS.COM <span style="color:black"</span></p>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
+        <a <img href="https://s3.amazonaws.com/learn-verified/columbia-logo.png"></a>
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
