--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png">
         <!-- span text 'COLUMBIARECORDS.COM' -->
-
+        <p> COLUMBIARECORDS.COM <span style="color:black"</span></p>
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
